--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/fragments/navbar.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/fragments/navbar.html
@@ -51,6 +51,19 @@
             
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" th:if="${session.usuariosession != null}" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Comentario
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                    <li><a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/comentario/registrar}">Crear Comentario</a></li>
+                    <li><hr class="dropdown-divider"></li>
+
+                    <li><a class="dropdown-item" th:href="@{/comentario/lista}">Listar Comentarios</a></li>
+                </ul>
+            </li>
+            
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" th:if="${session.usuariosession != null}" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Reserva
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
