--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/familia_form.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/familia_form.html
@@ -25,8 +25,8 @@
 
             <form class="formulario" action="/familia/registro" method="POST" >
 
-                <div class="form-group my-3">
-                    <label class="mb-2">Cargar Familia</label>                   
+                <div class="form-group my-3">                    
+                    <h3>Cargar Familia</h3>
                 </div>
                 <div class="form-group my-3">
                     <input type="text" class="form-control" name="nombre" placeholder="Nombre">
