--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/index.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
                 </div>-->
                 
                 <div class="container contenedorLibros">
-                    <p class="tituloLibros" th:if="${session.usuariosession != null}" th:text=" 'Hola de vuelta '+ ${session.usuariosession.nombre} "></p>
+                    <p class="tituloLibros" th:if="${session.usuariosession != null}" th:text=" 'Hola '+ ${session.usuariosession.alias} "></p>
                 </div>
                 
                 <div class="bg-circle-1 bg-circle"></div>
