--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/casa_form.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/casa_form.html
@@ -26,7 +26,7 @@
             <form class="formulario" action="/casa/registro" method="POST" >
 
                 <div class="form-group my-3">
-                    <label class="mb-2">Cargar Casa</label>                   
+                    <h3>Cargar Casa</h3>
                 </div>
                 
                 <div class="form-group my-3">
