--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/comentario_form.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/comentario_form.html
@@ -25,8 +25,8 @@
 
             <form class="formulario" action="/comentario/registro" method="POST" >
 
-                <div class="form-group my-3">
-                    <label class="mb-2">Cargar Comentario</label>                   
+                <div class="form-group my-3">                   
+                    <h3>Cargar Comentario</h3>
                 </div>
                 
                 <div class="form-group my-3">
