--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/casa_modificar.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/casa_modificar.html
@@ -50,6 +50,10 @@
                 <div class="form-group my-3">                   
                     <input th:value="${casa.tipoVivienda}" type="text" class="form-control" name="tipoVivienda" placeholder="Tipo de vivienda">
                 </div>
+                
+                <div class="form-group my-3">
+                    <input type="file" class="form-control" name="archivo" >
+                </div>
                                
                 <button type="submit" class="btn btn-primary mt-3 botones">Actualizar</button>
             </form>
