Commit 14: Seguridad web - Actualizar casa_modificar.html

--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/casa_list.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/casa_list.html
@@ -56,7 +56,7 @@
                         <td th:text="${casa.tipoVivienda}"></td>
                         
                         <td 
-                            <a><img th:if="${casa.imagen != null}" class="logo" th:src="@{/imagen/perfil/__${casa.id}__}" ></a>
+                            <a><img th:if="${casa.imagen != null}" class="logoCasa" th:src="@{/imagen/perfil/__${casa.id}__}" ></a>
                         </td>
                         
                                                 
