--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/error.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/error.html
@@ -22,7 +22,7 @@
                     </div>
                 </section>
                 <div class="container contenedorLibros">
-                    <p class="tituloLibros" th:if="${session.usuariosession != null}" th:text=" 'Hola de vuelta '+ ${session.usuariosession.nombre} "></p>
+                    <p class="tituloLibros" th:if="${session.usuariosession != null}" th:text=" 'Hola de vuelta '+ ${session.usuariosession.alias} "></p>
 
                 </div>
                 <div class="bg-circle-1 bg-circle"></div>
@@ -34,7 +34,7 @@
 
         <footer th:replace= "/fragments/footer :: footer" ></footer>
 
-        <!-- JavaScript Bundle with Popper -->
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
     </body>
