--- a/EjExtraSpring-estancias/estancias/src/main/resources/static/css/index.css
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/static/css/index.css
@@ -23,6 +23,11 @@
     margin: auto;
 }
 
+.logoCasa{
+    width: 100%;
+    margin: auto;
+}
+
 .tituloBiblioteca{
     width: 80%;
     text-align: center;
