--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/casa_form.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/casa_form.html
@@ -49,6 +49,18 @@
                     <input type="text" class="form-control" name="pais" placeholder="Pais">
                 </div>
                 
+                
+                <div class="form-group my-3">
+                    <label for="date">Fecha Desde</label>
+                    <input type="date" class="form-control" name="fechaDesde" placeholder="Fecha Desde">
+                </div>
+                
+                <div class="form-group my-3">
+                    <label for="date">Fecha Hasta</label>
+                    <input type="date" class="form-control" name="fechaHasta" placeholder="Fecha Hasta">
+                </div>
+                
+                
                 <div class="form-group my-3">
                     <input type="number" class="form-control" name="minDias" placeholder="Minimo de días">
                 </div>
