--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/casa_modificar.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/casa_modificar.html
@@ -9,7 +9,7 @@
 
         <div class="container-fluid m-5 contenedor">
 
-            <form class="formulario" th:action="@{/casa/modificar/__${casa.id}__}" method="POST">
+            <form class="formulario" th:action="@{/casa/modificar/__${casa.id}__}" method="POST" enctype="multipart/form-data">
                 
                 <input hidden th:value= "${id}" name="id">
 
@@ -35,6 +35,16 @@
                     <input th:value="${casa.pais}" type="text" class="form-control" name="pais" placeholder="Pais">
                 </div>
                 
+                <div class="form-group my-3">
+                    <label for="date">Fecha Desde</label>
+                    <input th:value="${casa.fechaDesde}" type="date" class="form-control" name="fechaDesde" placeholder="Fecha Desde">
+                </div>
+                
+                <div class="form-group my-3">
+                    <label for="date">Fecha Hasta</label>
+                    <input th:value="${casa.fechaHasta}" type="date" class="form-control" name="fechaHasta" placeholder="Fecha Hasta">
+                </div>
+                
                 <div class="form-group my-3">                   
                     <input th:value="${casa.minDias}" type="text" class="form-control" name="minDias" placeholder="Minimo de Dias">
                 </div>
@@ -52,7 +62,7 @@
                 </div>
                 
                 <div class="form-group my-3">
-                    <input type="file" class="form-control" name="archivo" >
+                    <input th:value="${casa.imagen}" type="file" class="form-control" name="archivo" >
                 </div>
                                
                 <button type="submit" class="btn btn-primary mt-3 botones">Actualizar</button>
