--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/reserva_form.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/reserva_form.html
@@ -31,6 +31,16 @@
                 <div class="form-group my-3">
                     <input type="text" class="form-control" name="huesped" placeholder="Huesped">
                 </div>
+                
+                <div class="form-group my-3">
+                    <label for="date">Fecha Desde</label>
+                    <input type="date" class="form-control" name="fechaDesde" placeholder="Fecha Desde">
+                </div>
+                
+                <div class="form-group my-3">
+                    <label for="date">Fecha Hasta</label>
+                    <input type="date" class="form-control" name="fechaHasta" placeholder="Fecha Hasta">
+                </div>
                               
                 <div class="form-group my-3">
 
