Commit 16: Seguridad web - Modificaciones cliente, familia y reservas

--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/cliente_form.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/cliente_form.html
@@ -57,7 +57,7 @@
                
                 <div class="form-group my-3">
 
-                    <select name="idUsuario">
+                    <select sec:authorize="hasRole('ADMIN')" name="idUsuario">
 
                         <option>Seleccionar Usuario</option>
 
@@ -66,6 +66,16 @@
                                 th:text="${usuario.alias}"
                                 />
                     </select>
+                    
+                    <select sec:authorize="hasRole('USER')" name="idUsuario">
+
+                        <option>Seleccionar Usuario</option>
+
+                        <option th:value="${session.usuariosession.id}"
+                                th:text="${session.usuariosession.alias}"
+                                />
+                    </select>
+                    
                 </div>
                 
 
