--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/familia_list.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/familia_list.html
@@ -21,7 +21,7 @@
                         <th scope="col">Usuario</th>
                         <th scope="col">Casa</th>
                                                                                                
-                        <th scope="col" sec:authorize="hasRole('ADMIN')" >Acciones</th>
+                        <th scope="col" sec:authorize="hasRole('ADMIN') or hasRole('USER')" >Acciones</th>
                         <th scope="col" sec:authorize="hasRole('ADMIN')" >Acciones</th>
 
                     </tr>
@@ -38,7 +38,7 @@
                         <td th:text="${familia.casa.calle}"></td>
                                               
                         <td>
-                            <a sec:authorize="hasRole('ADMIN')" th:href= "@{/familia/modificar/__${familia.id}__}"><i class="fas fa-feather-alt"></i> Modificar </a>
+                            <a sec:authorize="hasRole('ADMIN') or hasRole('USER')" th:href= "@{/familia/modificar/__${familia.id}__}"><i class="fas fa-feather-alt"></i> Modificar </a>
                         </td>                       
                         <td>
                             <a sec:authorize="hasRole('ADMIN')" th:href= "@{/familia/eliminar/__${familia.id}__}"><i class="fas fa-feather-alt"></i> Eliminar </a>
