--- a/EjExtraSpring-estancias/estancias/src/main/resources/templates/comentario_list.html
+++ b/EjExtraSpring-estancias/estancias/src/main/resources/templates/comentario_list.html
@@ -16,7 +16,7 @@
                         <th scope="col">Descripcion</th>                       
                         <th scope="col">Casa</th>
                                                 
-                        <th scope="col" sec:authorize="hasRole('ADMIN')" >Acciones</th>
+                        <th scope="col" sec:authorize="hasRole('ADMIN') or hasRole('USER')" >Acciones</th>
                         <th scope="col" sec:authorize="hasRole('ADMIN')" >Acciones</th>
 
                     </tr>
@@ -30,7 +30,7 @@
                         
                                                 
                         <td>
-                            <a sec:authorize="hasRole('ADMIN')" th:href= "@{/comentario/modificar/__${comentario.id}__}"><i class="fas fa-feather-alt"></i> Modificar </a>
+                            <a sec:authorize="hasRole('ADMIN') or hasRole('USER')" th:href= "@{/comentario/modificar/__${comentario.id}__}"><i class="fas fa-feather-alt"></i> Modificar </a>
                         </td>                       
                         <td>
                             <a sec:authorize="hasRole('ADMIN')" th:href= "@{/comentario/eliminar/__${comentario.id}__}"><i class="fas fa-feather-alt"></i> Eliminar </a>
